--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<header>
 							<h3>Form</h3>
 						</header>
-						<form method="post" action="#">
+						<form action="post" data-netlify="true">
 							<div class="row">
 								<div class="col-6 col-12-mobilep">
 									<label for="name">Name</label>
